@@ -1,3 +1,8 @@
+Tue Oct 29 18:45:08 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_trace.c (tp_free): remvoed because empty free function.
+	  Use RUBY_TYPED_NEVER_FREE instead.
+
 Tue Oct 29 18:37:33 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* include/ruby/ruby.h: introduce new flags for T_TYPEDDATA.
